进一步汉化

--- a/themes/hugo-prose/i18n/en.yaml
+++ b/themes/hugo-prose/i18n/en.yaml
@@ -33,3 +33,13 @@
 
 - id: notFound404
   translation: "404 NOT FOUND"
+
+- id: postListTitle
+  translation: "Post"
+
+- id: postsListTitle
+  translation: "Posts"
+
+- id: cardsListTitle
+  translation: "Cards"
+ 
