--- a/themes/hugo-prose/i18n/zh.yaml
+++ b/themes/hugo-prose/i18n/zh.yaml
@@ -33,4 +33,13 @@
   
 - id: notFound404
   translation: "页面没找到（错误代码 404）"
+
+- id: postListTitle
+  translation: "文章"
+
+- id: postsListTitle
+  translation: "文章"
+
+- id: cardsListTitle
+  translation: "作者"
   
