--- a/content/post/code.Rmd
+++ b/content/post/code.Rmd
@@ -7,7 +7,9 @@ weight: 80
 description: 图的绘制代码和说明如表所示。运行表中的代码，即可再现书中的插图。
 ---
 
-图的绘制代码和说明如下表所示。请先安装和加载**MSG**包：
+本书插图除了外部引用的图片外，均使用 R 语言绘制。读者可以很方便地获取作图代码，来重现书中插图。
+
+首先，请安装和加载 **MSG** 包：
 
 ```{r, eval=FALSE}
 install.packages("MSG")
@@ -18,12 +20,26 @@ library("MSG")
 Sys.setlocale("LC_CTYPE", "Chinese")
 ```
 
-再运行下表中的代码，即可再现书中的插图。
+
+然后就可以使用 `msg()` 函数来获取插图代码了。这又可分为两种方式。
+
+第一种方式是运行 `msg('图的编号')`。例如书中的“图 4.1”，可运行 `msg('4.1')`。注意：图的编号要放在一对引号里。如果忘记了输入引号，那么得到的源代码和图形可能不是你想要得到的，如 `msg(4.10)` 将得到图 4.1 而非图 4.10。
+
+很多图形我们都给出了 R 基础作图和 **ggplot2** 作图两种解决方案，
+在这种情况下，`msg('图的编号')`得到的一般是基础作图代码和图形。如
+果想得到 **ggplot2** 图形，只需在图形编号前面增加一个 `2` 就可以了，例
+如 `msg('24.1')`，可得到图 4.1 **ggplot2** 版本的图示和源代码。
+
+有些图形需要额外的附加包支持，初次使用时需要读者自行安装。为了方便，读者可以运行 `msg('0')`，一次性安装本书示例代码中所有需要的附加包。
+
+第二种方式是运行 ``msg('图的英文代号')`。例如，图 4.1 的英文代号是 "vadeaths-barplot"，那么可运行 `msg('vadeaths-barplot')`，等价于 `msg('4.1')`。
+
+图的编号和英文代号如下表所示。
 
 ```{r, echo=FALSE}
 graphnr <- read.csv(system.file("extdata/graphnr.csv", package = "MSG"))
-graphnr$nr <- paste0("`msg('", graphnr$nr, "')`")
-names(graphnr) <- c("代码", "图形")
-knitr::kable(graphnr)
+graphnr$nr <- as.character(graphnr$nr)
+names(graphnr) <- c("编号", "英文代号")
+knitr::kable(graphnr, align = c("r", "l"))
 ```
 
