--- a/themes/hugo-prose/i18n/zh.yaml
+++ b/themes/hugo-prose/i18n/zh.yaml
@@ -35,10 +35,7 @@
   translation: "页面没找到（错误代码 404）"
 
 - id: postListTitle
-  translation: "文章"
-
-- id: postsListTitle
-  translation: "文章"
+  translation: "采撷"
 
 - id: cardsListTitle
   translation: "作者"
