--- a/themes/hugo-prose/i18n/zh.yaml
+++ b/themes/hugo-prose/i18n/zh.yaml
@@ -35,7 +35,7 @@
   translation: "页面没找到（错误代码 404）"
 
 - id: postListTitle
-  translation: "采撷"
+  translation: ""
 
 - id: cardsListTitle
   translation: "作者"
